[tool.poetry]
name = "cidsum"
version = "0.1.0"
description = ""
authors = ["Titusz Pan <tp@py7.de>"]

[tool.poetry.dependencies]
python = "^3.6"
base58 = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
protobuf = "^3.12.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
